# Feature_Extraction

./: .gitignore  README.md
Matlab/: ReadMe.md  ReadMe_for_process_scanline_csv.docx  angle_between_lines.m  angle_twolines.m  angle_twolines3d.m  corner_detection.m  laserID_logParser.m  line_detection.m  plot_accumulated_scanlines.m  process_clustered_scanline_v1.m  process_clustered_scanline_v2.m  process_scanline.m  process_scanline_csv.m  process_scanline_multi_lasers.m  process_scanline_new_features.m  scanline_feature_extract.m  scanline_feature_extract_m8.m  scanline_pc_extract.m  test_neighbors.m
Matlab/Test_Features/: apply_geofence.m  compute_linearity.m  compute_linearity_using_sw.m  compute_moment2.m  compute_moment_using_sw.m  compute_omnivar_using_sw.m  compute_smoothness.m  compute_smoothness_using_sw.m  features_analysis.m  generate_circle.m  generate_cylinder.m  generate_sphere.m  main.m  rot.m  rotationmatrices.m
Matlab/utilities/: SWindowInRadiusSearch.m  SWindowknnSearch_v1.m  SWindowknnSearch_v2.m  checkWindowSize.m  clustering_using_rangetheta.m  clustering_using_rangethetav2.m  contains_ends.m  disti.m  find_index.m  mergestruct.m  odd_int.m  scanline_feature_extract_m8_v2.m  shift_index.m  sort_index.m
Matlab/utilities/dataset_handling/: laserID_logParser_v2.m  loadDatasetInfo.m  load_laserID.m  sortbyfilenumber.m
Matlab/utilities/features/: compute_density.m  compute_derivative.m  compute_feature_using_sw.m  compute_feature_using_sw_v2.m  compute_feature_using_sw_v3.m  compute_feature_using_sw_v4.m  compute_pca.m  computelength.m  create_feature_struct.m  dotprod_fitlines_v1.m  dotprod_fitlines_v2.m  dotprod_fitlines_v3.m  fill_feature_struct.m  lin_quad_fit_costcompare.m  linearfit.m  logfunc.m  medoid.m  proposedfunc.m  proposedfuncnoisy.m  scanline_feature_extract_v2.m  test_logfunction.m
Matlab/utilities/features/geometric_features/: anisotropy.m  eigen_entropy.m  eigen_sum.m  linearity.m  moments.m  omnivariance.m  planarity.m  smoothness.m  sphericity.m  surfacevariance.m
Matlab/utilities/mfames/: license.txt  mfames.m
Matlab/utilities/plot/: append_DataTipTemplate.m  clearaxis.m  clearfig.m  doSmoothing_Plot.m  hist_point_separation.m  hist_rangetheta_separation.m  load_fig_preferences.m  plot_clusters.m  plot_components.m  plot_geometric_features.m  plot_geometric_features_v2.m  plot_geometric_features_v3.m  plot_range_theta.m  plot_scanline.m  plot_sofa3d.m
cpp/: CMakeLists.txt  ReadMe.md  prepare_cmake.sh
cpp/parser/include/: arguparser.h  clustering.h  eigen_erase.h  find_std_vector.h  intersect.h  line_parser.h  matrix_select.h  not_intersect.h  point_type.h  print_point_struct.h  sample_points.h  sequence.h  vector_select.h
cpp/parser/src/: arguparser.cpp
cpp/src/: main.cpp  main_testv1.cpp  main_testv2.cpp
documents/: Corner Points Extraction Algorithm.docx  Geometric Features.docx
tex/: References.bib  corner_and_line_detection.tex  settings.tex
tex/Sections/: Corner_Detection.tex  Introduction.tex  Notation.tex  Note_to_Coauthors.tex  Problem_Statement.tex
